--- a/loja.html
+++ b/loja.html
@@ -361,12 +361,11 @@
       <img src="shavv.png" alt="Logo Shaver Barber" class="topo-logo">
       <div class="topo-title">
         <span class="app-name"><strong>Shaver</strong> Barber</span>
-        <span class="section">Loja da barbearia</span>
       </div>
     </div>
 
     <div class="topo-actions">
-      <button class="btn-voltar" onclick="window.location.href='cliente.html'">
+      <button class="btn-voltar" onclick="window.location.href='clientes.html'">
         <i class="bi bi-arrow-left"></i>
         <span>Voltar</span>
       </button>
